fix clip-path and height on small devices

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -262,9 +262,9 @@ footer p {
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .about {
-    height: 1200px;
+    height: 1220px;
     padding: 10px 5px 50px;
-    clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 95%, 0 100%);
   }
 
   .about-title {
